--- a/Density Functions/Histogram.ipynb
+++ b/Density Functions/Histogram.ipynb
@@ -20,18 +20,14 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# تولید داده نمونه\n",
     "np.random.seed(0)\n",
-    "data = np.random.normal(loc=70, scale=10, size=100)  # داده‌های وزن (میانگین=70، انحراف معیار=10)\n",
+    "data = np.random.normal(loc=70, scale=10, size=100)\n",
     "\n",
-    "# پارامترهای هیستوگرام\n",
-    "num_bins = 10  # تعداد بازه‌ها\n",
+    "num_bins = 10  \n",
     "\n",
-    "# هیستوگرام\n",
     "counts, bin_edges = np.histogram(data, bins=num_bins, density=True)\n",
     "bin_centers = (bin_edges[:-1] + bin_edges[1:]) / 2\n",
     "\n",
-    "# تجسم هیستوگرام\n",
     "plt.bar(bin_centers, counts, width=bin_edges[1] - bin_edges[0], alpha=0.7, edgecolor='k')\n",
     "plt.title(\"Histogram Density Estimation\")\n",
     "plt.xlabel(\"Weight\")\n",
