--- a/Gradient-Descent/Mini-Batch-Gradient-Descent.ipynb
+++ b/Gradient-Descent/Mini-Batch-Gradient-Descent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -10,20 +10,23 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Mini-Batch Gradient Descent:\n"
+      "Mini-Batch Gradient Descent:\n",
+      "Epoch 1: x = 1.8415, f(x) = 3.3912\n",
+      "Epoch 2: x = 1.8415, f(x) = 3.3912\n",
+      "Epoch 3: x = 1.8415, f(x) = 3.3912\n",
+      "Epoch 4: x = 1.8415, f(x) = 3.3912\n",
+      "Epoch 5: x = 1.8415, f(x) = 3.3912\n"
      ]
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'f' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 31\u001b[0m\n\u001b[1;32m     28\u001b[0m num_epochs \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m5\u001b[39m\n\u001b[1;32m     30\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mMini-Batch Gradient Descent:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 31\u001b[0m \u001b[43mmini_batch_gradient_descent\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mY\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbatch_size\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlearning_rate\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum_epochs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[2], line 22\u001b[0m, in \u001b[0;36mmini_batch_gradient_descent\u001b[0;34m(X, Y, batch_size, learning_rate, num_epochs)\u001b[0m\n\u001b[1;32m     20\u001b[0m         grad \u001b[38;5;241m=\u001b[39m grad_f_batch(batch_X)\u001b[38;5;241m.\u001b[39mmean()  \u001b[38;5;66;03m# Gradient for the batch\u001b[39;00m\n\u001b[1;32m     21\u001b[0m         x \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m=\u001b[39m learning_rate \u001b[38;5;241m*\u001b[39m grad  \u001b[38;5;66;03m# Update\u001b[39;00m\n\u001b[0;32m---> 22\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEpoch \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mepoch\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m: x = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mx\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.4f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, f(x) = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mf\u001b[49m(x)\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.4f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     23\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m x\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'f' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "np.float64(1.8415097239185558)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
