Add Comment into the Missing values

--- a/Pre-Processing/missing-values-cat2num.ipynb
+++ b/Pre-Processing/missing-values-cat2num.ipynb
@@ -113,6 +113,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Replace Missing Values"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -153,6 +160,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Encoding Datas"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -182,6 +196,13 @@
     "le=LabelEncoder()\n",
     "X[:,0]=le.fit_transform(X[:,0])\n",
     "X\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## OneHotEncoder"
    ]
   },
   {
@@ -224,6 +245,13 @@
     "# ct=ColumnTransformer([('Country',OneHotEncoder(),[0])],remainder=\"drop\") --> delete remain column\n",
     "X=ct.fit_transform(X)\n",
     "X"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Standardzation"
    ]
   },
   {
