Add Normalizer(L2norm) and Binarizer

--- a/Pre-Processing/Normalization-nearest-missing/nearest-minmax.ipynb
+++ b/Pre-Processing/Normalization-nearest-missing/nearest-minmax.ipynb
@@ -516,6 +516,110 @@
     "data=scaler.fit_transform(data)\n",
     "data"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## L2Norm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import Normalizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.21576149, 0.45465319, 0.36078151, ..., 0.14330359, 0.29547338,\n",
+       "        0.61132423],\n",
+       "       [0.06846077, 0.49711461, 0.62961459, ..., 0.13566457, 0.19397217,\n",
+       "        0.        ],\n",
+       "       [0.28796015, 0.56271609, 0.32100475, ..., 0.1551997 , 0.11218447,\n",
+       "        0.61191531],\n",
+       "       ...,\n",
+       "       [0.28998908, 0.59950507, 0.58187974, ..., 0.07030564, 0.14789443,\n",
+       "        0.        ],\n",
+       "       [0.0400252 , 0.43082401, 0.33463692, ..., 0.07873446, 0.29485231,\n",
+       "        0.6804284 ],\n",
+       "       [0.06416727, 0.50979121, 0.62589385, ..., 0.11038852, 0.03636145,\n",
+       "        0.        ]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "norm=Normalizer()\n",
+    "data=norm.fit_transform(data)\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Binarizer\n",
+    "Binarize data (set feature values to 0 or 1) according to a threshold.\n",
+    "\n",
+    "Values greater than the threshold map to 1, while values less than or equal to the threshold map to 0. With the default threshold of 0, only positive values map to 1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import Binarizer\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 1., 1., ..., 1., 1., 1.],\n",
+       "       [1., 1., 1., ..., 1., 1., 0.],\n",
+       "       [1., 1., 1., ..., 1., 1., 1.],\n",
+       "       ...,\n",
+       "       [1., 1., 1., ..., 1., 1., 0.],\n",
+       "       [1., 1., 1., ..., 1., 1., 1.],\n",
+       "       [1., 1., 1., ..., 1., 1., 0.]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "binarizer=Binarizer(threshold=0.0)\n",
+    "data_b=binarizer.fit_transform(data)\n",
+    "data_b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
